- 删除 FormTemplate.razor 表单模板，支持从 Schema 直接定义模板，无需为模板文件创建 razor 文件（创建 razor 会多一层 DropItem 组件） - 从 DropItem.razor 中抽取组件渲染相关逻辑独立为 ComponentItem.razor 文件，以便在 DropItemContainer.razor 中复用 - DropItemContainer.razor 中支持直接渲染模板中的组件（基于 ComponentSchema 的 IsTemplate 属性判断），无需多余渲染一层 DropItem.razor，使得使用模板页（如表单模板）的效果和直接拖拽模板组件创建页面的效果相同 - PropertySetting.razor 中增加 "数据源" 属性，为后续组件数据加载做准备 - 修改部分样式，覆盖 ComponentPanel.razor、SettingPanel.razor 组件内 antdesign 部分样式

--- a/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/DesignEngineComponentBase.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Abstraction/DesignEngineComponentBase.razor
@@ -32,7 +32,7 @@
 
         component.ComponentFragments = [];
         component.ComponentProperty = new();
-        component.ComponentStyle = new() { DefaultStyle = "height:100%; width:100;" };
+        component.ComponentStyle = new() { DefaultStyle = "height:100%; width:100%;" };
         component.ComponentEvent = default;
         component.DragEffectStyle = default;
         component.IsDropedAfter = default;
