--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/FlexWrap.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/FlexWrap.razor
@@ -11,7 +11,7 @@
     /// </summary>
     private ComponentSchema _component;
 
-    private string _boxStyle = "width:100%;height:auto;border-radius:6px;";
+    private string _boxStyle = "width:100%; border-radius:6px;";
     private string _justify = "center";
     private string _align = "center";
 
@@ -28,7 +28,7 @@
         if (_component == null)
             _component = Component.CopyNew();
 
-        _component.ComponentStyle.DefaultStyle = "min-height:150px;width:100%;";
+        _component.ComponentStyle.DefaultStyle = "min-height:150px; width:100%; background-color: #f4f4f4;";
     }
     #endregion
 }
