--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -1,6 +1,6 @@
 ﻿@inject DragDropStateService DragDropStateService
 
-<div class="designpage" style="margin:5px; height:100%; height:100%; overflow-y: auto;">
+<div class="designpanel" style="margin:5px; height:100%; overflow-y: auto;">
     <DropItemContainer ContainerComponent="@DragDropStateService.GetRootComponent(AppId, PageId)"></DropItemContainer>
 </div>
 
