--- a/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
-<Layout Class="layout designpage">
-    <Content Class="designpage">
+<Layout Class="layout" Style="height:100%;">
+    <Content Style="height:100%;">
         @Body
     </Content>
 </Layout>
