--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PropertySetting.razor.css
@@ -1,4 +1,4 @@
-﻿/* ====================== ComponentSetting.razor ========================== */
+﻿/* ====================== PropertySetting.razor ========================== */
 .propertysetting-item {
     margin: 5px 15px 20px 10px;
 }
