--- a/src/Host/H.LowCode.Admin.Host.Client/_Imports.razor
+++ b/src/Host/H.LowCode.Admin.Host.Client/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Reflection
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -7,3 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using H.LowCode.Admin.Host.Client
+@using AntDesign
+@using H.LowCode
