--- a/src/Admin/H.LowCode.Admin/Pages/SolutionCenter.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/SolutionCenter.razor
@@ -1,6 +1,106 @@
 ﻿@page "/admin/solutioncenter"
 
-<h1>解决方案中心</h1>
-
-<p>集成解决方案</p>
-<p>报表解决方案</p>
+<Tabs DefaultActiveKey="tab_template_app" Class="center-div" Centered Animated>
+    <TabPane Tab="行业解决方案" Key="tab_solution_industry">
+        <Card Title="智慧医院" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="餐饮连锁" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="酒店行业" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+    </TabPane>
+    <TabPane Tab="集成解决方案" Key="tab_template_integration">
+        <Card Title="账号体系集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="页面集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="数据集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="流程审批集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="报表集成" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+    </TabPane>
+    <TabPane Tab="开放能力" Key="tab_template_capabilities">
+        <Card Title="JAVA SDK" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="组件库开发" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="个性化定制" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+        <Card Title="自定义插件" Style="float:left; width:300px; margin:5px;">
+            <Extra>
+                <a href="#">查看</a>
+            </Extra>
+            <Body>
+                <p>Card content</p>
+            </Body>
+        </Card>
+    </TabPane>
+</Tabs>
