--- a/src/Admin/H.LowCode.Admin/Layout/MyAppLayout.razor
+++ b/src/Admin/H.LowCode.Admin/Layout/MyAppLayout.razor
@@ -16,44 +16,10 @@
 
 @code
 {
-    private readonly MenuDataItem[] _menuData =
-    {
-        new MenuDataItem
-        {
-            Path = "/myapp/pagemanager/appid",
-            Name = "页面管理",
-            Icon = "profile",
-            Key = "page"
-        },
-        new MenuDataItem
-        {
-            Path = "/myapp/menumanager/appid",
-            Name = "导航管理",
-            Icon = "menu",
-            Key = "menu"
-        },
-        new MenuDataItem
-        {
-            Path = "/myapp/publish/appid",
-            Name = "应用发布",
-            Icon = "cloud-upload",
-            Key = "publish"
-        },
-        new MenuDataItem
-        {
-            Path = "/myapp/datasource/appid",
-            Name = "数据源管理",
-            Icon = "database",
-            Key = "datasource"
-        },
-        new MenuDataItem
-        {
-            Path = "/myapp/appsettings/appid",
-            Name = "应用设置",
-            Icon = "setting",
-            Key = "appsettings"
-        }
-    };
+    [Parameter]
+    public string AppId { get; set; }
+
+    private MenuDataItem[] _menuData;
 
     public LinkItem[] Links { get; set; } =
     {
@@ -65,4 +31,70 @@
             BlankTarget = true,
         }
     };
+    
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+
+        Init();
+    }
+
+    private void Init()
+    {
+        InitAppId();
+
+        InitMenuData(AppId);
+    }
+
+    private void InitAppId()
+    {
+        if ((this.Body.Target as RouteView)?.RouteData.RouteValues?.TryGetValue("AppId", out object appId) == true)
+        {
+            AppId = appId?.ToString();
+        }
+
+        if (string.IsNullOrEmpty(AppId))
+            throw new NullReferenceException(nameof(AppId));
+    }
+
+    private void InitMenuData(string appId)
+    {
+        _menuData = [
+            new MenuDataItem
+            {
+                Path = $"/myapp/pagemanager/{appId}",
+                Name = "页面管理",
+                Icon = "profile",
+                Key = "page"
+            },
+            new MenuDataItem
+            {
+                Path = $"/myapp/menumanager/{appId}",
+                Name = "导航管理",
+                Icon = "menu",
+                Key = "menu"
+            },
+            new MenuDataItem
+            {
+                Path = $"/myapp/publish/{appId}",
+                Name = "应用发布",
+                Icon = "cloud-upload",
+                Key = "publish"
+            },
+            new MenuDataItem
+            {
+                Path = $"/myapp/datasource/{appId}",
+                Name = "数据源管理",
+                Icon = "database",
+                Key = "datasource"
+            },
+            new MenuDataItem
+            {
+                Path = $"/myapp/appsettings/{appId}",
+                Name = "应用设置",
+                Icon = "setting",
+                Key = "appsettings"
+            }
+        ];
+    }
 }
