--- a/src/Admin/H.LowCode.Admin/Pages/Index.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Index.razor
@@ -1,33 +1,102 @@
 ﻿@page "/"
 
-<h1>Hello, H.LowCode!</h1>
+<style>
+    .grid-space {
+        margin: 10px;
+        padding: 15px;
+        background-color: #fff;
+        border-radius: 5px;
+    }
+    .card-space {
+        float: left;
+        width: 31%;
+        margin: 5px;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+</style>
 
+<div style="width:80%; margin:auto;">
+    <GridRow>
+        <GridCol Span="18">
+            <GridRow Class="grid-space">
+                <GridCol Span="24">
+                    <Card Bordered="true" Style="">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                </GridCol>
+            </GridRow>
+            <GridRow Class="grid-space">
+                <GridCol Span="24">
+                    <Card Bordered="true" Class="card-space">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                    <Card Bordered="true" Class="card-space">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                    <Card Bordered="true" Class="card-space">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                    <Card Bordered="true" Class="card-space">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                    <Card Bordered="true" Class="card-space">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                    <Card Bordered="true" Class="card-space">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                </GridCol>
+            </GridRow>
+        </GridCol>
+        <GridCol Span="6">
+            <GridRow Class="grid-space">
+                <GridCol Span="24">
+                    <p>页面设计示例(快捷入口)：</p>
+                    <p>
+                        <a href="/designer/testapp/newpage" target="_blank">页面设计器</a>
+                    </p>
+                    <p>
+                        <a href="/designer/testapp/88888888-8888-8888-8888-888888888888" target="_blank">页面设计器 (已有元数据)</a>
+                    </p>
+                </GridCol>
+            </GridRow>
+            <GridRow Class="grid-space">
+                <GridCol Span="24">
+                    <p>页面渲染示例(快捷入口)：</p>
+                    <p>
+                        <a href="/form/basicform/1" target="_blank">基础表单渲染</a>
+                    </p>
+                    <p>
+                        <a href="/form/linkageform/2" target="_blank">联动表单渲染</a>
+                    </p>
+                    <p>
+                        <a href="/form/validateform/4" target="_blank">校验表单渲染</a>
+                    </p>
+                    <p>
+                        <a href="/form/complexform/5" target="_blank">复杂表单渲染</a>
+                    </p>
+                    <p>
+                        <a href="/form/customform/3" target="_blank">自定义表单渲染</a>
+                    </p>
+                    <p>
+                        <a href="/list" target="_blank">列表渲染</a>
+                    </p>
+                </GridCol>
+            </GridRow>
+            <GridRow Class="grid-space">
+                <GridCol Span="24">
+                    <Card Bordered="true" Class="card-space" Style="width:100%;">
+                        <a href="javascript:void(0)" onclick="@(()=>{ })"></a>
+                    </Card>
+                </GridCol>
+            </GridRow>
+        </GridCol>
+    </GridRow>
+</div>
 
-<p>页面设计示例：</p>
-<p>
-    <a href="/designer/testapp/newpage" target="_blank">页面设计器</a>
-</p>
-<p>
-    <a href="/designer/testapp/88888888-8888-8888-8888-888888888888" target="_blank">页面设计器 (已有元数据)</a>
-</p>
+@code {
 
-<p>&nbsp;</p>
-<p>页面渲染示例：</p>
-<p>
-    <a href="/form/basicform/1" target="_blank">基础表单渲染</a>
-</p>
-<p>
-    <a href="/form/linkageform/2" target="_blank">联动表单渲染</a>
-</p>
-<p>
-    <a href="/form/validateform/4" target="_blank">校验表单渲染</a>
-</p>
-<p>
-    <a href="/form/complexform/5" target="_blank">复杂表单渲染</a>
-</p>
-<p>
-    <a href="/form/customform/3" target="_blank">自定义表单渲染</a>
-</p>
-<p>
-    <a href="/list" target="_blank">列表渲染</a>
-</p>
+}
